# desktop-streaming

./: README.md
client/: CMakeLists.txt  client.cpp  client.h  decoder.cpp  decoder.h  h265.mkv  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/: CMakeLists.txt  encoder.cpp  encoder.h  main.cpp  server.cpp  server.h
